--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "body-scroll-lock": "4.0.0-beta.0",
     "classnames": "^2.3.1",
+    "less": "^4.1.2",
     "modaaals": "0.9.0",
     "react": "^17.0.2",
     "react-dom": "17.0.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactour": "^1.18.0",
+    "sass": "^1.43.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-router": "^5.1.17",
-    "@types/reactour": "^1.18.2"
+    "@types/reactour": "^1.18.2",
+    "sass-loader": "^12.3.0"
   }
 }
