--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd-mobile": "^5.0.0-rc.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "classnames": "^2.3.1",
     "less": "^4.1.2",
@@ -52,7 +53,7 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-router": "^5.1.17",
-    "@types/reactour": "^1.18.2",
+    "@types/reactour": "^1.17.1",
     "sass-loader": "^12.3.0"
   }
 }
